--- a/ImeiValidator.WebApplication/packages.config
+++ b/ImeiValidator.WebApplication/packages.config
@@ -5,7 +5,9 @@
   <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net45" />
   <package id="Autofac.WebApi2" version="3.4.0" targetFramework="net45" />
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
+  <package id="Chart.js" version="1.0.2" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
+  <package id="font-awesome" version="4.3.0" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="Knockout.Validation" version="1.0.1" targetFramework="net45" />
   <package id="knockoutjs" version="2.3.0" targetFramework="net45" />
