Fix project name.

--- a/ImeiValidator.JSUnitTests/ImeiValidator.JSUnitTests.csproj
+++ b/ImeiValidator.JSUnitTests/ImeiValidator.JSUnitTests.csproj
@@ -44,12 +44,11 @@
   <ItemGroup>
     <Content Include="Content\qunit-1.18.0.css" />
     <Content Include="Scripts\jquery.mockjax.js" />
-    <Content Include="Scripts\jquery.mockjax.min.js" />
     <Content Include="tests\imei.viewmodeltests.js" />
     <Content Include="Scripts\qunit-1.18.0.js" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="chutzpah.json" />
+    <None Include="tests\chutzpah.json" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
