--- a/ImeiValidator.WebApi/ImeiValidator.WebApi.csproj
+++ b/ImeiValidator.WebApi/ImeiValidator.WebApi.csproj
@@ -54,7 +54,9 @@
     <Compile Include="ImeiValidationController.cs" />
     <Compile Include="Models\ImeiRequest.cs" />
     <Compile Include="Models\ImeiResponse.cs" />
+    <Compile Include="Models\ChartResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StatisticsController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
