--- a/ImeiValidator.WebApplication/Web.config
+++ b/ImeiValidator.WebApplication/Web.config
@@ -17,6 +17,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="owin:AutomaticAppStartup" value="false" />
+    <add key="EnableOptimizations" value="false" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
